<resources>
    <string name="app_name">JoCare</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string-array name="TimesDay">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="DaysWeek">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string name="forget"><u>Forget Password ?</u></string>
    <string name="jocare"><b>JoCare</b></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="pleaselogin">Please log in with your account to continue</string>
    <string name="or">OR</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="already">Already have an account </string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="national_id">National ID</string>
    <string name="role">Role</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="panicHome">When you are in a need for a help just click the image</string>
    <string name="pinfo">Personal Information</string>
    <string name="pan">Panic Button</string>
    <string name="panic">Please enter your emergency numbers :</string>
    <string name="about">About JoCare</string>
    <string name="help">Disclaimer</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="policy">Privacy Policy</string>
    <string name="out">Logout</string>
    <string name="more">More</string>
    <string name="careG">Care Guidelines</string>
    <string name="hairC">Hair Care</string>
    <string name="hair_care">Hair Care</string>
    <string name="hair1">Hair Care :</string>
    <string name="hair2">How to Maintain Healthy Hair :</string>
    <string name="hair3">Hair care is an overall term for hygiene and cosmetology involving the hair which grows from the human scalp, and to a lesser extent facial, pubic and other body hair. Hair care routines differ according to an individual\'s culture and the physical characteristics of one\'s hair. Hair may be colored, trimmed, shaved, plucked or otherwise removed with treatments such as waxing, sugaring and threading. Hair care services are offered in salons, barbershops and day spas, and products are available commercially for home use. Laser hair removal and electrolysis are also available, though these are provided (in the US) by licensed professionals in medical offices or speciality spas.</string>
    <string name="bodyCare">Body Care</string>
    <string name="b1">Body Care :</string>
    <string name="b2">While slathering on a smattering of serums to my face one evening, as per usual, I suddenly felt a pang of sadness for my body. Somehow, the complexion always steals the self-care spotlight, while the rest of the body gets forgotten. But skin doesn’t end at the décolletage. Despite knowing this common sense, I—and plenty of other people that I know, TBH—diligently treat the skin on the face and let the rest suffer in silence, not even applying a drop of moisturizer to parched (not to mention itchy) limbs. It’s quite silly, really.</string>
    <string name="b3">Why Is Body Care Important :</string>
    <string name="b4">Proper skin care is important because our skin is the largest barrier against infection that we have. Keeping our skin healthy and moist helps keep this barrier strong.\nUsing a proper skin care regimen daily can help preserve this important protective layer.</string>
    <string name="newsFeed">News Feed</string>
    <string name="diabetes">Managing diabetes after incarceration: A difficult journey</string>
    <string name="d1">Dr. Rodlescia Sneed is an assistant professor in the Division of Public Health at Michigan State University. Her work examines the health and well-being of economically vulnerable older adults, including those with a history of incarceration. In this Opinion piece, she explains why managing diabetes can be difficult for someone who has been incarcerated.For the average adult, a diabetes diagnosis is life-changing. Managing diabetes involves a daily routine that shifts toward remembering to take medication, check blood sugar, and monitor carbohydrate intake. 
Frequent trips to multiple doctors’ offices become the norm, as regular foot checks, dental appointments, eye exams, and primary care visits are crucial for avoiding the complications of poorly managed disease.
These complications can include gum disease, cardiovascular problems, nerve damage, kidney failure, blindness, and even amputation. Individuals who receive an early diagnosis and manage the disease well can expect to live as long as those without diabetes, but research has linked poor disease management to reduced life expectancy of up to 8 years.  
For someone reentering society after being in prison, managing diabetes can be quite difficult. In the United States, more than 2 million people are incarcerated in jails and prisons on a given day, and nearly 5% of them have diabetes. 
These individuals typically do not serve life sentences; rather, 95% eventually return to community settings that may not readily embrace them or their medical needs. 
In the U.S., individuals who have been inmates in jails or prisons just once are seven times more likely to experience homelessness than the general population. Meanwhile, those who have been incarcerated two or more times are 13 times more likely than other people to lack housing.
Individuals with a criminal history face numerous collateral consequences of conviction — legal restrictions that disqualify them from accessing a range of resources and opportunities upon release.  
Unemployment is a major concern for people with a criminal history. According to the Prison Policy Initiative, individuals with a criminal history are nearly five times more likely to be unemployed than the general population. 
Many employment sectors bar those with a criminal history, limiting their ability to earn the money necessary to afford adequate housing. Those who turn to low-income housing programs often face being denied access, as many public housing programs have strict eligibility criteria that exclude individuals with a criminal history. 
This is true even for older adults. Many low-income senior housing assistance programs deny access to individuals with recent criminal convictions and permanently ban those with a history of criminal sexual conduct, even if the crime occurred decades earlier.
Dr. Rodlescia Sneed is an assistant professor in the Division of Public Health at Michigan State University. Her work examines the health and well-being of economically vulnerable older adults, including those with a history of incarceration. In this Opinion piece, she explains why managing diabetes can be difficult for someone who has been incarcerated.
Willie B. Thomas/Getty Images.
For the average adult, a diabetes diagnosis is life-changing. Managing diabetes involves a daily routine that shifts toward remembering to take medication, check blood sugar, and monitor carbohydrate intake. 
Frequent trips to multiple doctors’ offices become the norm, as regular foot checks, dental appointments, eye exams, and primary care visits are crucial for avoiding the complications of poorly managed disease. 
Health inequities affect all of us differently. Visit our dedicated hub for an in-depth look at social disparities in health and what we can do to correct them.
These complications can include gum disease, cardiovascular problems, nerve damage, kidney failure, blindness, and even amputation. Individuals who receive an early diagnosis and manage the disease well can expect to live as long as those without diabetes, but research has linked poor disease management to reduced life expectancy of up to 8 years.  
For someone reentering society after being in prison, managing diabetes can be quite difficult. In the United States, more than 2 million people are incarcerated in jails and prisons on a given day, and nearly 5% of them have diabetes. 
These individuals typically do not serve life sentences; rather, 95% eventually return to community settings that may not readily embrace them or their medical needs.   
For example, taking medication every day requires having a safe place to live and store medications. This is not a given for formerly incarcerated people, many of whom often struggle simply to find a place to live. 
In the U.S., individuals who have been inmates in jails or prisons just once are seven times more likely to experience homelessness than the general population. Meanwhile, those who have been incarcerated two or more times are 13 times more likely than other people to lack housing.
Individuals with a criminal history face numerous collateral consequences of conviction — legal restrictions that disqualify them from accessing a range of resources and opportunities upon release.  
Unemployment is a major concern for people with a criminal history. According to the Prison Policy Initiative, individuals with a criminal history are nearly five times more likely to be unemployed than the general population. 
Many employment sectors bar those with a criminal history, limiting their ability to earn the money necessary to afford adequate housing. Those who turn to low-income housing programs often face being denied access, as many public housing programs have strict eligibility criteria that exclude individuals with a criminal history. 
This is true even for older adults. Many low-income senior housing assistance programs deny access to individuals with recent criminal convictions and permanently ban those with a history of criminal sexual conduct, even if the crime occurred decades earlier.
Proper management of a chronic health condition such as diabetes is a low priority for survival when a person is struggling simply to find a safe place to sleep at night.  
Additionally, food insecurity complicates diabetes management for formerly incarcerated adults. Access to adequate quantities of nutritious food is crucial for effective diabetes management. 
A diabetes-friendly diet restricts carbohydrate intake, as carbohydrate-rich foods often raise blood glucose levels higher and faster than foods rich in protein and fiber.
Formerly incarcerated individuals, however, often report great difficulty in accessing healthful foods. Estimates of food insecurity among formerly incarcerated individuals returning to community settings are as high as 91%. 
Among the many collateral consequences of criminal conviction in the U.S. are limitations on the receipt of federal supplemental nutrition assistance program benefits (i.e., SNAP or food stamps) for individuals convicted of certain criminal offenses.</string>
</resources>