<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".News3">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/newsFeed"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/news3Back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:paddingTop="2dp"
            android:textAlignment="center"
            android:src="@drawable/back" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                style="@style/TextAppearance.AppCompat.Headline"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="219dp"
                android:src="@drawable/news3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/d1"
                android:padding="15dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>